2011-04-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Fade the find page overlay
        https://bugs.webkit.org/show_bug.cgi?id=58697

        * WebProcess/WebPage/FindController.cpp:
        Make the color components floats.

        (WebKit::overlayBackgroundColor):
        (WebKit::holeShadowColor):
        (WebKit::holeFillColor):
        Add helper functions for returning the colors given the fraction faded in.

        (WebKit::FindController::drawRect):
        Use the new helper functions.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::installPageOverlay):
        Start the fade animation unless we're replacing an already existing page overlay
        with another.

2011-04-15  Anders Carlsson  <andersca@apple.com>

        Fix Windows build.

        * WebProcess/WebPage/PageOverlay.cpp:
        (WebKit::PageOverlay::fadeAnimationTimerFired):

2011-04-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add the ability for PageOverlays to fade in and out
        https://bugs.webkit.org/show_bug.cgi?id=58694

        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageUninstallPageOverlay):
        WebPage::uninstallPageOverlay now takes a boolean. Default to false for now.

        * WebProcess/WebPage/FindController.cpp:
        (WebKit::FindController::findString):
        Pass false to uninstallPageOverlay.

        (WebKit::FindController::hideFindUI):
        Pass true to uninstallPageOverlay.
        
        * WebProcess/WebPage/PageOverlay.cpp:
        (WebKit::PageOverlay::PageOverlay):
        Initialize new member variables.

        (WebKit::PageOverlay::bounds):
        Get rid of an unnecessary webPage() getter.

        (WebKit::PageOverlay::setPage):
        Stop the animation timer.

        (WebKit::PageOverlay::startFadeInAnimation):
        Update m_fractionFadedIn and call startFadeAnimation.
